Update index text copy

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1>Hello, I’m <span class="em">Sean</span>.</h1>
     </header>
     <main>
-        <p>I enjoy making computing—especially computing on the web—better for human productivity and creative expression. Currently, I'm helping build new creative tools at Adobe. In the past, I managed engineering teams responsible for layout, CSS, and accessibility for Firefox at Mozilla.</p>
+        <p>I enjoy making computing—especially computing on the web—better for human productivity and creative expression. Currently, I'm helping build new creative tools at <a href="https://www.adobe.com">Adobe</a>. In the past, I managed engineering teams responsible for layout, CSS, and accessibility in <a href="https://www.mozilla.org/firefox" title="Download Firefox.">Firefox</a>.</p>
         <p>I build software, lead teams, and <a href="https://situated.blog" title="Read my blog.">write.</a> I'm originally from California and live with my wife and kids in the San Francisco Bay area.</p>
         <p>The best way to reach me is <a class="eml-protected" href="#">e-mail</a>, but you can also occasionally <a href="https://twitter.com/svoisen" title="My Twitter profile.">find me on Twitter.</a></p>
     </main>
